<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bluetooth Notify Wearable</string>
    <string name="title_acitivity_edit">Rule Add/Edit</string>
    <string name="hello_world">Hello there you sexy world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_other">Other</string>
    <string name="preference_file_key">com.ilovescience.bluetoothnotify.PREFERENCE_FILE_KEY</string>
    <string name="action_add_contact">Add contact</string>
    <string name="add_keyword_text">Add text keyword</string>
    <string name="reset_shared_prefs">Reset All</string>
    <string name="add_keyword_email_subj">Add email keyword</string>
    <string name="my_set_saved_Callers">mySavedCallers</string>
    <string name="test_simulate_SMS">Test send</string>
    <string name="bluetooth_setup">Pair Bluetooth Device</string>
    <string name="button_new_rule">Add a new Rule</string>

    <string name="phone_number_descriptor">Phone number with area code</string>
    <string name="contact_name_descriptor">Contact name to display</string>
    <string name="contact_email_descriptor">Email address</string>
    <string name="contact_facebook_descriptor">Facebook user</string>
    <string name="contact_keyword_descriptor">Keyword for text or email(Optional)</string>
    <string name="notification_color_descriptor">Select colour for this rule</string>
    <string name="notification_vibrate_descriptor">Select vibration pattern for this rule continuous</string>
    <string name="notification_vibrate_duration">Total time for buzzing.</string>
    <string name="button_Get_Contact">Get Contact</string>
    <string name="button_Set_Rule">Set Rule</string>
    <string name="button_Erase_Rule">Erase Rule</string>
    <string name="warning_more_info">Please fill in the name field</string>

    <string-array name="buzz_pattern">
        <item>On 0.1s off .09s</item>
        <item>On 0.5s off 0.5s</item>
        <item>Continuous</item>
    </string-array>

    <string-array name="buzz_duration">
        <item>1s</item>
        <item>2s</item>
        <item>Until Stopped</item>
    </string-array>

    <string-array name="indicator_color">
        <item>Red</item>
        <item>Blue</item>
        <item>Green</item>
        <item>White</item>
        <item>Yellow</item>
        <item>Magenta</item>
        <item>Cyan</item>
        <item>No light</item>
    </string-array>


    <string name="scan">Scan</string>
    <string name="stopScan">Stop Scan</string>
    <string name="connManager">Connection Manager</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="read">Read</string>
    <string name="send">Send</string>
    <string name="reset">Reset</string>
    <string name="reconnect">Reconnect</string>
    <string name="intensity">Intensity</string>
    <string name="button1">Button 1</string>
    <string name="button2">Button 2</string>
    <string name="temperatureTag">Temperature:</string>
    <string name="temperature">Temperature</string>
    <string name="humidityTag">Humidity:</string>
    <string name="humidity">Humidity</string>
    <string name="prefsFile">ConfigurationStorage</string>
    <string name="controlYeelight">Control Yeelight Blue</string>
    <string name="yeelight">yeelight</string>
    <string name="sensortag">sensortag</string>
    <string name="monitorSensorTag">Monitor SensorTag</string>
    <string name="monitorTethercell">Monitor Tethercell</string>
    <string name="monitorHM10">Monitor HM10</string>
    <string name="monitorRadiation">Monitor Radiation</string>
    <string name="monitorBLEduinoUart">Monitor BLEduino UART</string>
    <string name="voltageTag">Voltage (mV): </string>
    <string name="stateTag">State: </string>
    <string name="periodTag">Advertising Period (msec): </string>
    <string name="utcTag">UTC Time: </string>
    <string name="timerTag">Timer: </string>
    <string name="start_in_minutes">Start</string>
    <string name="duration_in_minutes">Duration</string>
    <string name="repeat_in_minutes">Repeat</string>
    <string name="values_in_minutes">(Values in minutes)</string>
    <string name="setTimer">Set Timer</string>
    <string name="receivedText">Received Text:</string>
    <string name="sentText">Text to send:</string>
    <string name="AT">Test:OK</string>
    <string name="ioState">IO State</string>
    <string name="inputVoltagePrompt">Select pin</string>
    <string name="checkInputVoltage">Check input voltage</string>
    <string name="button_Set_New_Rule">Set New Rule</string>
    <string-array name="inputVoltageDescriptors">
        <item>P0_0AT+ADCB?</item>
        <item>P0_1AT+ADCA?</item>
        <item>P0_2AT+ADC9?</item>
        <item>P0_3AT+ADC8?</item>
        <item>P0_4AT+ADC7?</item>
        <item>P0_5AT+ADC6?</item>
        <item>P0_6AT+ADC5?</item>
        <item>P0_7AT+ADC4?</item>
    </string-array>

</resources>
