<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".ConfigurationActivity">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        />


    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_keyword_text"
        android:id="@+id/button_add_keyword_text"
        android:layout_below="@+id/button_add_contact"
        android:layout_alignParentStart="true" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_keyword_email_subj"
        android:id="@+id/button_add_keyword_email_subj"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button_add_keyword_text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_add_contact"
        android:id="@+id/button_add_contact"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editText_phone_contact"
        android:layout_alignTop="@+id/button_add_contact"
        android:layout_toEndOf="@+id/button_add_contact" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_shared_prefs"
        android:id="@+id/button_reset"
        android:layout_below="@+id/button_add_keyword_email_subj"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bluetooth_setup"
        android:id="@+id/button_AddBLEinfo"
        android:layout_below="@+id/button_reset"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AT"
        android:id="@+id/button_AT_SEND"
        android:layout_below="@+id/button_AddBLEinfo"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_new_rule"
        android:id="@+id/button_new_rule"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
