<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RuleEditActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/contact_name_descriptor" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_text_height"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/editText_contact_name"
        android:editable="false"
        android:paddingTop="@dimen/input_text_padding"
        android:paddingBottom="@dimen/input_text_padding"
        android:gravity="fill_vertical" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/phone_number_descriptor" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_text_height"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editText_contact_phone"
        android:paddingTop="@dimen/input_text_padding"
        android:paddingBottom="@dimen/input_text_padding"
        android:gravity="fill_vertical" />

    <TextView
        android:layout_width="219dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/contact_email_descriptor" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_text_height"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText_contact_email"
        android:paddingTop="@dimen/input_text_padding"
        android:paddingBottom="@dimen/input_text_padding" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/contact_keyword_descriptor" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_text_height"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/editText_keyword"
        android:paddingTop="@dimen/input_text_padding"
        android:paddingBottom="@dimen/input_text_padding" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/notification_vibrate_descriptor"
        android:id="@+id/textView" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="@dimen/spinner_height"
        android:id="@+id/spinner_buzz_type" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/notification_vibrate_duration"
        android:id="@+id/textView3" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="@dimen/spinner_height"
        android:id="@+id/spinner_duration" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/notification_color_descriptor"
        android:id="@+id/textView4" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="@dimen/spinner_height"
        android:id="@+id/spinner_Color" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_Get_Contact"
            android:id="@+id/button_Get_Contact" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_Set_Rule"
            android:id="@+id/button_add_rule" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_Erase_Rule"
            android:id="@+id/button_Erase_rule" />
    </LinearLayout>
</LinearLayout>